--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "big-number": "^2.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
