--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "bootstrap-icons": "^1.7.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-confirm-alert": "^2.7.0",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "react-toastify": "^8.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
