--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@celo-tools/use-contractkit": "^1.3.0",
     "@metamask/jazzicon": "^2.0.0",
+    "@openzeppelin/contracts": "^4.4.1",
     "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,6 +14,7 @@
     "big-number": "^2.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
+    "dotenv": "^10.0.0",
     "ipfs-http-client": "^55.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -45,5 +47,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.0.0",
+    "ethers": "^5.0.0",
+    "hardhat": "^2.8.2"
   }
 }
