--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-marketplace-dapp",
+  "name": "react-minter-dapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
