--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3.storage": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
